homework/module12/gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: httpserver-gw
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - httpsserver.cncamp.io
    port:
      name: https-default
      number: 443
      protocol: HTTPS
    tls:
      credentialName: httpserver-cert
      mode: SIMPLE
